fixed broken styles

--- a/src/app.mobile.scss
+++ b/src/app.mobile.scss
@@ -22,6 +22,20 @@
       }
     }
   }
+  .app > .main .article {
+    width: calc(100% - 60px);
+    padding: 0;
+    .article-contents {
+      margin-top: 0; 
+      padding: 8px;
+      .articles-container {
+        column-count: 1;
+      }
+    }
+    x-tabs[x-qyw3n3] .tabs [tab-for] {
+      min-width: 80px;
+    }
+  }
   .app > .header .header-nav .icons {
     display: none;
   }
